{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 3592,
  "lineage": "1d1aff4c-1cf2-33a7-c7b8-2c17664f7ff9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fe5343cfacccd0c",
            "domain": "vpc",
            "id": "eipalloc-09fe5343cfacccd0c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-198-14-212.compute-1.amazonaws.com",
            "public_ip": "44.198.14.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa3c6608a0c438e3",
            "domain": "vpc",
            "id": "eipalloc-0fa3c6608a0c438e3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-105-181.compute-1.amazonaws.com",
            "public_ip": "34.194.105.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nginx_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b7e993c038a85dc",
            "domain": "vpc",
            "id": "eipalloc-08b7e993c038a85dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-41-187.compute-1.amazonaws.com",
            "public_ip": "52.72.41.187",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:400926585409:instance/i-009b898609b153495",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009b898609b153495",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jan2023",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05aed4c168ccf0e4c",
            "private_dns": "ip-10-1-2-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0924bf3bd9b24f497",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ff9d1cece1803be",
            "tags": {
              "Name": "vpc-b-instance"
            },
            "tags_all": {
              "Name": "vpc-b-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f80f2bbcc91717b"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_security_group",
            "aws_subnet.private_subnet_b_1",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:internet-gateway/igw-013e2401c39c23c51",
            "id": "igw-013e2401c39c23c51",
            "owner_id": "400926585409",
            "tags": {
              "Name": "ig-vpc a"
            },
            "tags_all": {
              "Name": "ig-vpc a"
            },
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:internet-gateway/igw-07267c276b3014990",
            "id": "igw-07267c276b3014990",
            "owner_id": "400926585409",
            "tags": {
              "Name": "ig-vpc b"
            },
            "tags_all": {
              "Name": "ig-vpc b"
            },
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-a-nat-gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fe5343cfacccd0c",
            "connectivity_type": "public",
            "id": "nat-02e64976c6e88703c",
            "network_interface_id": "eni-0098275ed3d022f00",
            "private_ip": "10.0.1.178",
            "public_ip": "44.198.14.212",
            "subnet_id": "subnet-0882df61b24da10f8",
            "tags": {
              "Name": "vpc-a-nat-gw1"
            },
            "tags_all": {
              "Name": "vpc-a-nat-gw1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-b-nat-gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa3c6608a0c438e3",
            "connectivity_type": "public",
            "id": "nat-0916a47f08e386451",
            "network_interface_id": "eni-0385d824a578833b0",
            "private_ip": "10.1.1.30",
            "public_ip": "34.194.105.181",
            "subnet_id": "subnet-0e3982996f904b80a",
            "tags": {
              "Name": "vpc-b-nat-gw2"
            },
            "tags_all": {
              "Name": "vpc-b-nat-gw2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0b684c5fa352594f8",
            "id": "rtb-0b684c5fa352594f8",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02e64976c6e88703c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-1-private"
            },
            "tags_all": {
              "Name": "vpc-a-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0a6d91e3363e86b1a",
            "id": "rtb-0a6d91e3363e86b1a",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02e64976c6e88703c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-2-private"
            },
            "tags_all": {
              "Name": "vpc-a-2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-04b34bc121a5e8a39",
            "id": "rtb-04b34bc121a5e8a39",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013e2401c39c23c51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-a-public"
            },
            "tags_all": {
              "Name": "vpc-a-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0e4d4b9ea75ae20d7",
            "id": "rtb-0e4d4b9ea75ae20d7",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0916a47f08e386451",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-1-private"
            },
            "tags_all": {
              "Name": "vpc-b-1-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-0716809f632d1457f",
            "id": "rtb-0716809f632d1457f",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0916a47f08e386451",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-2-private"
            },
            "tags_all": {
              "Name": "vpc-b-2-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-b-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:route-table/rtb-08b411dca91b5fd5c",
            "id": "rtb-08b411dca91b5fd5c",
            "owner_id": "400926585409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07267c276b3014990",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-b-public"
            },
            "tags_all": {
              "Name": "vpc-b-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-a-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0b7d046dc8e37db",
            "route_table_id": "rtb-0b684c5fa352594f8",
            "subnet_id": "subnet-01d711fee74163854"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_route_table.vpc-a-1-private",
            "aws_subnet.private_subnet_a_1",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-a-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aa983ff9978ebfc",
            "route_table_id": "rtb-0a6d91e3363e86b1a",
            "subnet_id": "subnet-0e1b43eeed9cb68b6"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ig-vpc_a",
            "aws_nat_gateway.vpc-a-nat-gw1",
            "aws_route_table.vpc-a-2-private",
            "aws_subnet.private_subnet_a_2",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-b-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d86ce23d787eb658",
            "route_table_id": "rtb-0e4d4b9ea75ae20d7",
            "subnet_id": "subnet-00ff9d1cece1803be"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_route_table.vpc-b-1-private",
            "aws_subnet.private_subnet_b_1",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-b-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96081926a36d14d",
            "route_table_id": "rtb-0716809f632d1457f",
            "subnet_id": "subnet-09b0c3ed81cd56c84"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ig-vpc_b",
            "aws_nat_gateway.vpc-b-nat-gw2",
            "aws_route_table.vpc-b-2-private",
            "aws_subnet.private_subnet_b_2",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1225498487bbffe",
            "route_table_id": "rtb-04b34bc121a5e8a39",
            "subnet_id": "subnet-0882df61b24da10f8"
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_a",
            "aws_route_table.vpc-a-public",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6194a54ec087839",
            "route_table_id": "rtb-08b411dca91b5fd5c",
            "subnet_id": "subnet-0e3982996f904b80a"
          },
          "dependencies": [
            "aws_internet_gateway.ig-vpc_b",
            "aws_route_table.vpc-b-public",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:security-group/sg-05f80f2bbcc91717b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f80f2bbcc91717b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg20230330000918325200000005",
            "name_prefix": "instance-sg",
            "owner_id": "400926585409",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:security-group/sg-0f396148566a54b24",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f396148566a54b24",
            "ingress": [],
            "name": "terraform-eks-sg-cluster",
            "name_prefix": "",
            "owner_id": "400926585409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-sg"
            },
            "tags_all": {
              "Name": "terraform-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 8080,
            "id": "sgrule-1274566217",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f396148566a54b24",
            "security_group_rule_id": "sgr-095540b4fd4de6a22",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-cluster",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-01d711fee74163854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d711fee74163854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet A 1"
            },
            "tags_all": {
              "Name": "Private Subnet A 1"
            },
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0e1b43eeed9cb68b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1b43eeed9cb68b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet A 2"
            },
            "tags_all": {
              "Name": "Private Subnet A 2"
            },
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-00ff9d1cece1803be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ff9d1cece1803be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet B 1"
            },
            "tags_all": {
              "Name": "Private Subnet B 1"
            },
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-09b0c3ed81cd56c84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b0c3ed81cd56c84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet B 2"
            },
            "tags_all": {
              "Name": "Private Subnet B 2"
            },
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0882df61b24da10f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0882df61b24da10f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet A"
            },
            "tags_all": {
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:subnet/subnet-0e3982996f904b80a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3982996f904b80a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400926585409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet B"
            },
            "tags_all": {
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-0194397ae575e4129"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:vpc/vpc-0c77afb6ff2a3f165",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a50c3e4bd256c275",
            "default_route_table_id": "rtb-0b8dc658d81cd3191",
            "default_security_group_id": "sg-092c017b0b7778a0a",
            "dhcp_options_id": "dopt-072422efc549b62a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c77afb6ff2a3f165",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8dc658d81cd3191",
            "owner_id": "400926585409",
            "tags": {
              "Name": "VPC A"
            },
            "tags_all": {
              "Name": "VPC A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400926585409:vpc/vpc-0194397ae575e4129",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a8e4e85af094e230",
            "default_route_table_id": "rtb-02447a2da51a9d35e",
            "default_security_group_id": "sg-042fb66eb6bae1acf",
            "dhcp_options_id": "dopt-072422efc549b62a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0194397ae575e4129",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02447a2da51a9d35e",
            "owner_id": "400926585409",
            "tags": {
              "Name": "VPC B"
            },
            "tags_all": {
              "Name": "VPC B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-06ab9760ec1699ed7",
            "peer_owner_id": "400926585409",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0194397ae575e4129",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between vpc_b and vpc_a"
            },
            "tags_all": {
              "Name": "VPC Peering between vpc_b and vpc_a"
            },
            "vpc_id": "vpc-0c77afb6ff2a3f165"
          },
          "dependencies": [
            "aws_vpc.vpc_a",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    }
  ]
}